--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
 
                 const [count, setCount] = React.useState(0)
                 
+                function updateCount() {
+                    setCount(count +1);
+                }
+                
                 return (
                     <div>
                         <div>{count}</div>
