--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en"><head>
     <script src="https://unpkg.com/react@17/umd/react.production.min.js" crossorigin=""></script>
     <script src="https://unpkg.com/react-dom@17/umd/react-dom.production.min.js" crossorigin=""></script>
