--- a/index.html
+++ b/index.html
@@ -183,4 +183,5 @@ ReactDOM.render(React.createElement(App, null), document.querySelector("#app"));
         ReactDOM.render(<App />, document.querySelector("#app"));
     </script>
 
-</body></html>
+</body>
+</html>
